--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
                             class="img-fluid rounded-5" loading="lazy">
+                        </div>
+                    <div class="col-md-4">
+                        <img src="img/Caetano_Veloso,_Fundo_Correio_da_Manhã.tif.jpg"
                     </div>
                 </div>
              </div>
