--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                             class="img-fluid rounded-5" loading="lazy">
                         </div>
                     <div class="col-md-4">
-                        <img src="img/Caetano_Veloso,_Fundo_Correio_da_Manhã.tif.jpg"class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/Caetano_Veloso,_Fundo_Correio_da_Manhã.tif.jpg"
+                            class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
              </div>
