--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@
                         <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
-                        </div>
-                    <div class="col-md-4">
-                        <img src="img/Caetano_Veloso,_Fundo_Correio_da_Manhã.tif.jpg"
+                        <img src=""img/Caetano_Veloso,_Fundo_Correio_da_Manhã.tif.jpg""
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
